--- a/less/home-page.less
+++ b/less/home-page.less
@@ -8,6 +8,7 @@
     
     .intro-image{
       width: 90%;
+      margin-top: 110px;
 
       img {
         .radius();
