--- a/less/navigation.less
+++ b/less/navigation.less
@@ -21,7 +21,7 @@
         font-size: 4rem;
         text-align: center;
         margin: 5px 0;
-        padding-top: 15px;
+        padding-top: 10px;
 
     }
     // Nav Buttons
@@ -36,7 +36,7 @@
             text-decoration: none;
             color: @header-font-color; 
             font-size: 1.8rem;
-            padding:1.8rem;
+            padding:1.6rem;
             
         }
     }
